# devops-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release-package.yaml
src/devops_python/: discovery.py  pyproject.py
src/devops_python/cli/: __init__.py  poetry.py  run.py  run_many.py
src/devops_runner_python/: __init__.py  discovery.py  env.py  env_validation.py  pyproject.py
src/devops_runner_python/cli/: exec.py  uv.py
tests/: test_env_validation.py
