[project]
name = "devops-runner-python"
version = "0.1.12"
description = ""
authors = [{ name = "Amit Aharoni", email = "amit.sites@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "tomli (>=2.2.1,<3.0.0)",
  "pydantic (>=2.10.6,<3.0.0)",
  "colorama (>=0.4.6,<0.5.0)",
  "python-dotenv (>=1.0.1,<2.0.0)",
  "pyyaml (>=6.0.2,<7.0.0)",
]

[project.urls]
Homepage = "https://github.com/vaharoni/devops-python"
Issues = "https://github.com/vaharoni/devops-python/issues"

[project.scripts]
devopspy = "devops_runner_python.cli:main"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
